--- a/index (1).html
+++ b/index (1).html
@@ -579,10 +579,10 @@
                 <div class="author-grid">
                     <div class="author-card">
                         <h3>Author Information</h3>
-                        <p><strong>Developer:</strong> Claude (Anthropic AI Assistant)</p>
-                        <p><strong>Version:</strong> 2.0 Professional Edition</p>
+                        <p><strong>Developer:</strong> Pashazade Yusif</p>
+                        <p><strong>Version:</strong> 2.0 Edition</p>
                         <p><strong>Created:</strong> June 20, 2025</p>
-                        <p><strong>License:</strong> Educational & Research Use</p>
+                        <p><strong>Study:</strong> Programming</p>
                     </div>
                     <div class="author-card">
                         <h3>Technical Specifications</h3>
